2017-06-22 0.8.6 indev
Minor bug fixes.
SMF reader finally takes chunk length into account.
Do not prepend sysex header to F0h sysex. Let the
readers do it.
File readers code cleanups and refined error messages.

2017-06-21 0.8.6 indev
Fixed FTBFS on Windows.
Fixed the default output device option.
Seeking now restores CC values correctly.

2017-06-21 0.8.6 indev
Fixed a bunch of bugs and crashes in the RtMidi
output device.

2017-06-21 0.8.6 indev
Code refactoring:
  Complete rewrite of the MIDI mapper. The new
  architecture allows implementation of custom MIDI
  output devices.
Enforces single fluidsynth instance. Deprecating
the option.
Documentation uptate.
The lite version no longer have hardcoded soundfont
path.
More testing needed for this revision.

2017-06-16 0.8.6 indev
Code refactoring:
  Tracks information are now preserved.
  CMidiReaderCollection no longer handles file info
  operations.
  Note on with zero velocity are no longer treated
  separately.
Small fixes to several memory leaks.
More code refactoring is going on.

2017-06-02 0.8.5 indev
Accumulative changes from 2017-03:
  Don't crash if RtMidi initialization failed.
  Hopefully fixed crash when closing the
  visualization window on Windows.
  Documentation update.

2017-02-14 0.8.5 indev
Scan for plugins in the executable directory instead
of the working directory.

2017-02-13 0.8.5 indev
Also use the new mechanism to handle the main Window.
Explicit initialization of variable fixes #4 2).

2017-02-13 0.8.5 indev
Fix pitch bend range handling.
Allow registering a string option as file path.
Provide an easier way to set path values in options.
Revert to old geometry storage mechanism and improved
it. Hope this one will work on Windows.
Make the time slider less ugly.

2017-02-12 0.8.5 indev
UI revolution cont'd. Powered by @BLumia.
Expose new APIs to plugin developer.
Use svg icons.

2017-02-12 0.8.5 indev
New functionality API. Port built-in features to the
new API.